--- a/index.html
+++ b/index.html
@@ -9,36 +9,38 @@
 </head>
 
 <body>
-    <div class="display">
-        <p id="display_panel"></p>
-        <p id="display_panel2"></p>
-    </div>
+    <div class="container">
+        <div class="display">
+            <p id="display_panel"></p>
+            <p id="display_panel2"></p>
+        </div>
 
-    <div class="numbers">
-        <button class="small-buttons" data-value="%">%</button>
-        <button class="small-buttons" data-value="3.14159265359">π</button>
-        <button class="small-buttons" data-value="**">^</button>
-        <button class="small-buttons" data-value="2.71828183">e</button>
-        <button id="AC">AC</button>
-        <button data-value="(">(</button>
-        <button data-value=")">)</button>
-        <button class="orange-buttons" data-value="/">÷</button>
-        <button data-value="7">7</button>
-        <button data-value="8">8</button>
-        <button data-value="9">9</button>
-        <button class="orange-buttons" data-value="*">×</button>
-        <button data-value="4">4</button>
-        <button data-value="5">5</button>
-        <button data-value="6">6</button>
-        <button class="orange-buttons" data-value="-">−</button>
-        <button data-value="1">1</button>
-        <button data-value="2">2</button>
-        <button data-value="3">3</button>
-        <button class="orange-buttons" data-value="+">+</button>
-        <button data-value="0">0</button>
-        <button data-value=".">.</button>
-        <button id="delete"><img src="icons/backspace.svg" width="20em"></button>
-        <button class="orange-buttons" id="enter">=</button>
+        <div class="numbers">
+            <button class="small-buttons" data-value="%">%</button>
+            <button class="small-buttons" data-value="3.14159265359">π</button>
+            <button class="small-buttons" data-value="**">^</button>
+            <button class="small-buttons" data-value="2.71828183">e</button>
+            <button id="AC">AC</button>
+            <button data-value="(">(</button>
+            <button data-value=")">)</button>
+            <button class="orange-buttons" data-value="/">÷</button>
+            <button data-value="7">7</button>
+            <button data-value="8">8</button>
+            <button data-value="9">9</button>
+            <button class="orange-buttons" data-value="*">×</button>
+            <button data-value="4">4</button>
+            <button data-value="5">5</button>
+            <button data-value="6">6</button>
+            <button class="orange-buttons" data-value="-">−</button>
+            <button data-value="1">1</button>
+            <button data-value="2">2</button>
+            <button data-value="3">3</button>
+            <button class="orange-buttons" data-value="+">+</button>
+            <button data-value="0">0</button>
+            <button data-value=".">.</button>
+            <button id="delete"><img src="icons/backspace.svg" width="25em"></button>
+            <button class="orange-buttons" id="enter">=</button>
+        </div>
     </div>
 </body>
 <script src="logic.js"></script>
