--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button class="small-buttons" data-value="3.14159265359">π</button>
             <button class="small-buttons" data-value="**">^</button>
             <button class="small-buttons" data-value="2.71828183">e</button>
-            <button id="AC">AC</button>
+            <button id="AC">RJ</button>
             <button data-value="(">(</button>
             <button data-value=")">)</button>
             <button class="orange-buttons" data-value="/">÷</button>
